Functional content presentation
Content is presented well on the front-end
(haven't added the drag & drop to panel yet)

- Synced styleguide CSS with kirby.
- Added seperate tags for figure vs img tag
- JS & scss compiled with webpack now

--- a/assets/scss/layouts/_global.scss
+++ b/assets/scss/layouts/_global.scss
@@ -36,6 +36,7 @@
 	margin: 0 auto;
 	position: relative;
 	height: 100%;
+	min-height: 100vh;
 	@include outline;
 }
 
@@ -50,4 +51,8 @@
 	float: left;
 	width: 24rem;
 	z-index: 2;
+	display: none;
+}
+.l__fixed-box.js-visible {
+	display: block;
 }
