--- a/assets/scss/modules/_site-header.pug
+++ b/assets/scss/modules/_site-header.pug
@@ -1,2 +1,2 @@
 h1.site-header
-	a(href="/styleguide/index.html") The Curtistan Style guide
+	a.site-header__a(href="/styleguide/index.html") The Curtistan Style guide
