--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -13,6 +13,7 @@
 @import 'modules/site-header';
 @import 'modules/project-item';
 @import 'modules/color-swatch';
+@import 'modules/global-footer';
 
 /* layouts */
 @import 'layouts/global';
