--- a/assets/styleguide/layouts/_styleguide.html
+++ b/assets/styleguide/layouts/_styleguide.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Curtisland styleguide</title>
-    <link rel="stylesheet" href="/css/style.css"/>
+    <link rel="stylesheet" href="style/style.css"/>
   </head>
   <body>
   </body>
