Replacing Builder plugin with custom builder mod
Very hackish, but draggable builder items are functional.

--- a/site/fields/customBuilder/assets/css/custom.css
+++ b/site/fields/customBuilder/assets/css/custom.css
@@ -40,3 +40,12 @@
 .btn-rounded {
         background-color:white;
 }
+
+
+.structure-entry.builder-entry.builder-add-container{
+  position: fixed;
+  top: 20%;
+  left: 25%;
+  background-color: #fff;
+  right: 5%;
+}
