--- a/assets/scss/layouts/_global.scss
+++ b/assets/scss/layouts/_global.scss
@@ -1,4 +1,5 @@
 @import 'settings/grid';
+@import 'settings/modularscale';
 
 @mixin outline {
 	//outline: 1px solid red;
@@ -31,6 +32,10 @@
 	min-height: 100vh;
 	width: 100%;
 	overflow: visible;
+}
+
+section.l__project:first-of-type {
+	padding-top: ms(3);
 }
 
 .l__project__content-wrapper {
