--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -170,7 +170,6 @@ figcaption {
   font-size: 2.25rem;
   margin: 1rem auto;
   text-align: center;
-  position: fixed;
   top: 0;
   left: 0;
   z-index: 1;
@@ -316,9 +315,10 @@ section.l__project:first-of-type {
   float: left;
   width: 24rem;
   z-index: 2;
-  display: none; }
+  visibility: hidden; }
 
-.l__fixed-box.js-visible {
-  display: block; }
+.js-visible .l__fixed-box,
+.js-visible.l__fixed-box {
+  visibility: visible; }
 
 /*# sourceMappingURL=style.css.map */
