--- a/assets/scss/layouts/_styleguide.pug
+++ b/assets/scss/layouts/_styleguide.pug
@@ -1,9 +1,13 @@
 html
 	head
 		title Curtisland styleguide
-		link(rel="stylesheet" href="style/style.css")
+		link(rel="stylesheet" href="css/style.css")
 		block styles
 		block scripts
 	body
 		block nav
 		block content
+		script
+			|	document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] +
+			|	':35729/livereload.js?snipver=1"></' + 'script>')
+		script(src="/scripts/dist/index.js")
