--- a/assets/styleguide/layouts/_styleguide.html
+++ b/assets/styleguide/layouts/_styleguide.html
@@ -2,8 +2,13 @@
 <html>
   <head>
     <title>Curtisland styleguide</title>
-    <link rel="stylesheet" href="style/style.css"/>
+    <link rel="stylesheet" href="css/style.css"/>
   </head>
   <body>
+    <script>
+      	document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] +
+      	':35729/livereload.js?snipver=1"></' + 'script>')
+    </script>
+    <script src="/scripts/dist/index.js"></script>
   </body>
 </html>
