--- a/assets/scss/modules/_project-item.scss
+++ b/assets/scss/modules/_project-item.scss
@@ -14,10 +14,10 @@
 	p:last-of-type {
 		padding-bottom: ms(0);
 	}
-	.image-link {
+	.image-link a {
 		background-image: none;
 	}
-	.image-link:hover {
+	.image-link:hover a {
 		background-image: none;
 	}
 	img {
